syntax = "proto3";

package workflowpb;

import "google/protobuf/timestamp.proto";

option go_package = "../workflowpb";

message Record {
  string run_id = 2;
  string workflow_name = 3;
  string foreign_id = 4;
  int32 status = 9;
  bool is_start = 5;
  bool is_end = 6;
  bytes object = 7;
  google.protobuf.Timestamp created_at = 8;
}

message Event {
  int64 id = 1;
  string foreign_id = 2;
  map<string, string> headers = 3;
  bytes body = 4;
  google.protobuf.Timestamp created_at = 5;
}
